--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MKBS学生信息</title>
-	<meta name="description" content="传说中绝不充值的偶像派车评人教主的真实圈速榜单">
+	<meta name="description" content="致敬传奇学校MKBS">
 	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap-table.min.css">
 	<link rel="stylesheet" href="./css/index.css?v=20240322">
