--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MKBS学生信息</title>
-	<meta name="description" content="致敬传奇学校MKBS">
+	<meta name="description" content="致敬传奇中式学校MKBS">
 	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap-table.min.css">
 	<link rel="stylesheet" href="./css/index.css?v=20240322">
@@ -38,8 +38,8 @@
 			<tr>
 				<td style="width: 5%"><img src="./img/logo.png" style="padding-right: 1em" /></td>
 				<td class="hid">
-					<h1 class="title">键盘车神教圈速榜</h1>
-					<h5 class="title">传说中的偶像派车评人教主的真实圈速榜单</h5>
+					<h1 class="title">zhi</h1>
+					<h5 class="title">致敬传奇中式学校MKBS</h5>
 				</td>
 				<td class="options">
 					<div class="row">
