--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<tr>
 				<td style="width: 5%"><img src="./img/logo.png" style="padding-right: 1em" /></td>
 				<td class="hid">
-					<h1 class="title">zhi</h1>
+					<h1 class="title">学生信息</h1>
 					<h5 class="title">致敬传奇中式学校MKBS</h5>
 				</td>
 				<td class="options">
