--- a/index.html
+++ b/index.html
@@ -181,35 +181,20 @@
 			<thead>
 				<th class="ranking">
 					排名
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
 				</th>
-				<th class="car">车型</th>
-				<th class="price t-right" style="width:100px;">售价</th>
-				<th class="hp t-center"  style="width:120px;">马力 (Ps)</th>
+				<th class="car">姓名Name</th>
+				<th class="price t-right" style="width:100px;">性别</th>
+				<th class="hp t-center"  style="width:120px;">入学时间 (Ps)</th>
 				<th class="speed blue t-left"  style="width:100px;">
-					圈速
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
+					生日
 				</th>
 				<th class="tyre"  style="width:80px;">
-					轮胎
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
+					走读/住宿
 				</th>
 				<th class="temperature t-center">
-					气温 (℃)
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
+					所选科目
 				</th>
-				<th class="powertrain black">动力总成</th>
-				<th class="limit black">
-					尾速
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
-				</th>
-				<th class="accelerate black">0-100</th>
-				<th class="mods t-center black"  style="width:40px;">
-					改装程度
-					<!-- <img src="./img/tips_alarm.png" alt="" class="icon"> -->
-				</th>
-				<!-- <th class="lv black">级别</th> -->
-				<th>链接</th>
+				<th class="powertrain black">就读状态</th>
 			</thead>
 
 			<tbody>
