--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
 				<th class="ranking">
 					排名
 				</th>
-				<th class="car">姓名Name</th>
-				<th class="price t-right" style="width:100px;">性别</th>
-				<th class="hp t-center"  style="width:120px;">入学时间 (Ps)</th>
-				<th class="speed blue t-left"  style="width:100px;">
+				<th class="name">姓名Name</th>
+				<th class="sex t-right" style="width:100px;">性别</th>
+				<th class="enrollement_date t-center"  style="width:120px;">入学时间 (Ps)</th>
+				<th class="birthday blue t-left"  style="width:100px;">
 					生日
 				</th>
 				<th class="tyre"  style="width:80px;">
 					走读/住宿
 				</th>
-				<th class="temperature t-center">
+				<th class="subjects t-center">
 					所选科目
 				</th>
-				<th class="powertrain black">就读状态</th>
+				<th class="status black">就读状态</th>
 			</thead>
 
 			<tbody>
