--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	</div>
 
 	<div class="table-responsive">
-		<table id="tb_results" class=" ">
+		<table id="tb_results" class="table table-hover active">
 			<thead>
 				<th class="ranking">
 					排名
