--- a/index.html
+++ b/index.html
@@ -212,20 +212,12 @@
 	{{each data as v i}}
 <tr 
   class="
-  {{if v.speed < 55}}
+  {{if v.sex === "男" }}
   speed0
-  {{else if v.speed < 60}}
+  {{else if v.sex === "女"}}
   speed1
-  {{else if v.speed < 62}}
+  {{else}}
   speed2
-  {{else if v.speed < 64}}
-  speed3
-  {{else if v.speed < 66}}
-  speed4
-  {{else if v.speed < 68}}
-  speed5
-  {{else if v.speed > 68}}
-  speed6
   {{/if}}
   "
   >
