--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="col-sm-4">
 							<div class="input-group">
 								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">搜索车型</button>
+									<button class="btn btn-default" type="button">搜索姓名</button>
 								</span>
 								<input type="text" class="form-control search" placeholder="关键字">
 							</div>
@@ -51,40 +51,25 @@
 						<div class="col-sm-4">
 							<div class="input-group">
 								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">级别</button>
+									<button class="btn btn-default" type="button">性别</button>
 								</span>
 								<select class="form-control lv">
-									<option value="all">所有</option>
-									<option value="MPV">MPV</option>
-									<option value="S">跑车</option>
-									<optgroup label="轿车">
-										<option value="0">所有轿车</option>
-										<option value="A00">A00级</option>
-										<option value="A0">A0级</option>
-										<option value="A">A级</option>
-										<option value="B">B级</option>
-										<option value="C">C级</option>
-									</optgroup>
-									<optgroup label="SUV">
-										<option value="SUV">所有SUV</option>
-										<option value="SUV1">小型</option>
-										<option value="SUV2">紧凑型</option>
-										<option value="SUV3">中型</option>
-										<option value="SUV4">中大型</option>
-										<option value="SUV5">大型</option>
-									</optgroup>
+									<option value="man">男</option>
+									<option value="woman">女</option>
 								</select>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="input-group">
 								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">原厂/改装</button>
+									<button class="btn btn-default" type="button">就读状态</button>
 								</span>
 								<select class="form-control mods">
 									<option value="all">所有</option>
-									<option value="0">原厂</option>
-									<option value="1">改装</option>
+									<option value="0">offline</option>
+									<option value="1">online</option>
+									<option value="2">completely-offline</option>
+									<option value="3">semi-offline</option>
 								</select>
 							</div>
 						</div>
@@ -93,25 +78,12 @@
 						<div class="col-sm-4">
 							<div class="input-group">
 								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">动力</button>
+									<button class="btn btn-default" type="button">住宿/走读</button>
 								</span>
 								<select class="form-control powerType">
 									<option value="all">所有</option>
-									<option value="0">油</option>
-									<option value="1">电</option>
-								</select>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="input-group">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">产地</button>
-								</span>
-								<select class="form-control producer">
-									<option value="all">所有</option>
-									<option value="0">国产</option>
-									<option value="1">合资</option>
-									<option value="2">进口</option>
+									<option value="0">住宿</option>
+									<option value="1">走读</option>
 								</select>
 							</div>
 						</div>
