--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 								<span class="input-group-btn">
 									<button class="btn btn-default" type="button">就读状态</button>
 								</span>
-								<select class="form-control mods">
+								<select class="form-control status">
 									<option value="all">所有</option>
-									<option value="0">offline</option>
-									<option value="1">online</option>
-									<option value="2">completely-offline</option>
-									<option value="3">semi-offline</option>
+									<option value="offline">offline</option>
+									<option value="online">online</option>
+									<option value="completely-offline">completely-offline</option>
+									<option value="semi-offline">semi-offline</option>
 								</select>
 							</div>
 						</div>
