--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<th class="speed blue t-left"  style="width:100px;">
 					生日
 				</th>
-				<th class="tyre"  style="width:80px;">
+				<th class="type"  style="width:80px;">
 					走读/住宿
 				</th>
 				<th class="temperature t-center">
@@ -134,7 +134,7 @@
 				<th class="speed blue t-left"  style="width:100px;">
 					生日
 				</th>
-				<th class="tyre"  style="width:80px;">
+				<th class="type"  style="width:80px;">
 					走读/住宿
 				</th>
 				<th class="temperature t-center">
@@ -158,7 +158,7 @@
 				<th class="birthday blue t-left"  style="width:100px;">
 					生日
 				</th>
-				<th class="tyre"  style="width:80px;">
+				<th class="type"  style="width:80px;">
 					走读/住宿
 				</th>
 				<th class="subjects t-center">
@@ -200,7 +200,7 @@
     <td class="t-right">{{v.sex}}</td>
     <td class="t-center">{{v.enrollement_date}}</td>
     <td class="blue t-left">{{v.birthday}}</td>
-    <td>{{v.tyre}}</td>
+    <td>{{v.type}}</td>
     <td class="t-center">{{v.subjects}}</td>
     <td class="black">{{v.status }}</td>
   </tr>
@@ -228,7 +228,7 @@
     <td class="t-right">{{v.sex}}</td>
     <td class="t-center">{{v.enrollement_date}}</td>
     <td class="blue t-left">{{v.birthday}}</td>
-    <td>{{v.tyre}}</td>
+    <td>{{v.type}}</td>
     <td class="t-center">{{v.subjects}}</td>
     <td class="black">{{v.status }}</td>
   </tr>
@@ -256,7 +256,7 @@
     <td class="t-right">{{v.sex}}</td>
     <td class="t-center">{{v.enrollement_date}}</td>
     <td class="blue t-left">{{v.birthday}}</td>
-    <td>{{v.tyre}}</td>
+    <td>{{v.type}}</td>
     <td class="t-center">{{v.subjects}}</td>
     <td class="black">{{v.status }}</td>
   </tr>
