--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 								<span class="input-group-btn">
 									<button class="btn btn-default" type="button">性别</button>
 								</span>
-								<select class="form-control lv">
-									<option value="man">男</option>
-									<option value="woman">女</option>
+								<select class="form-control sex">
+									<option value="男">男</option>
+									<option value="女">女</option>
 								</select>
 							</div>
 						</div>
