--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<span class="input-group-btn">
 									<button class="btn btn-default" type="button">搜索姓名</button>
 								</span>
-								<input type="text" class="form-control search" placeholder="关键字">
+								<input type="text" class="form-control name" placeholder="关键字">
 							</div>
 						</div>
 						<div class="col-sm-4">
