--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 									<button class="btn btn-default" type="button">性别</button>
 								</span>
 								<select class="form-control sex">
-									<option value="男">男</option>
-									<option value="女">女</option>
+									<option value="male">male</option>
+									<option value="female">female</option>
 								</select>
 							</div>
 						</div>
@@ -184,9 +184,9 @@
 	{{each data as v i}}
 <tr 
   class="
-  {{if v.sex === "男" }}
+  {{if v.sex === "male" }}
   speed3
-  {{else if v.sex === "女"}}
+  {{else if v.sex === "female"}}
   speed0
   {{else}}
   speed2
@@ -212,9 +212,9 @@
 	{{each data as v i}}
 <tr 
   class="
-  {{if v.sex === "男" }}
+  {{if v.sex === "male" }}
   speed0
-  {{else if v.sex === "女"}}
+  {{else if v.sex === "female"}}
   speed1
   {{else}}
   speed2
@@ -240,9 +240,9 @@
 	{{each data as v i}}
 <tr 
   class="
-  {{if v.sex === "男" }}
+  {{if v.sex === "male" }}
   speed0
-  {{else if v.sex === "女"}}
+  {{else if v.sex === "female"}}
   speed1
   {{else}}
   speed2
